--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "google-gax": "^1.6.4",
+    "json-to-html": "^0.1.2",
     "url": "^0.11.0"
   },
   "devDependencies": {},
