--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@google-cloud/datastore": "4.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "google-auth-library": "^5.5.1",
     "google-gax": "^1.6.4",
     "json-to-html": "^0.1.2",
+    "jwks-rsa": "^1.6.0",
+    "randomstring": "^1.1.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "url": "^0.11.0"
   },
   "devDependencies": {},
